examples/hello-world/csharp/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-csharp
  namespace: apps
spec:
  selector:
    app: hello-csharp
  ports:
    - port: 80
      targetPort: 8080
